rsfg/tests/scripts/error/panic-nonlit.sfg
fn main()
	var x = 5
	panic(x, 5)

